--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "autoprefixer": "10.4.20",
+    "autoprefixer": "^10.4.20",
     "eslint": "8.57.1",
     "eslint-config-next": "14.2.13",
     "next": "14.2.13",
-    "postcss": "8.4.47",
+    "postcss": "^8.4.47",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "tailwindcss": "3.4.13"
+    "tailwindcss": "^3.4.13"
   }
 }
