--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "autoprefixer": "^10.4.20",
     "eslint": "8.57.1",
     "eslint-config-next": "14.2.13",
+    "g": "^2.0.1",
+    "json-server": "^1.0.0-beta.3",
     "next": "14.2.13",
     "postcss": "^8.4.47",
     "react": "18.3.1",
